--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "browserify": "^14.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean-css": "^3.9.0",
     "gulp-notify": "^3.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
+    "onsenui": "^2.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-onsenui": "^1.6.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
